# ai-devsecops-policy-enforcement-agent

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.beads/: README.md  metadata.json
.github/workflows/: policy-review.yml  test.yml
docs/: ARCHITECTURE.md  AUTOFIX.md  COMPONENTS.md  DEMO.md  GITHUB-WORKFLOW.md  GITLAB-WORKFLOW.md  INTEGRATIONS.md  POLICY-MODEL.md  RAG-INTEGRATION.md  README.md  ROADMAP.md  WORKFLOW-INTEGRATION.md  WORKFLOWS.md  agent-architecture.md  evaluation-framework.md  system-thinking.md
examples/: comments-output.md  github-review-comments.md  gitlab-review-comments.md  insecure-github-actions.yml  insecure-gitlab-ci.yml  insecure-k8s-deployment.yaml  remediation-output.md  sample-finding-comment.md  sample-output.json  sample-output.md
examples/autofix/: README.md  insecure-argo-for-autofix.yaml  insecure-for-autofix.yaml  insecure-pipeline-for-autofix.yml
examples/insecure-github-argo-flow/: expected-report.md  github-actions.yml
examples/insecure-gitlab-argo-flow/: .gitlab-ci.yml  (+2 more)
policies/: default.yaml  fedramp-moderate.yaml  self-review.yaml  supply-chain-baseline.yaml
prompts/: compliance_mapping.md  gitops_review.md  pipeline_review.md  remediation_generation.md
scripts/: demo.ps1  demo.sh
tests/: test_autofix.py  test_gitops_analyzer.py  test_integration_payloads.py  test_integrations.py  test_models.py  test_pipeline_analyzer.py  test_policy_loader.py  test_remediation_engine.py  test_reporting.py  test_review_all.py  test_review_comments.py  test_review_workflow.py  test_workflow_artifacts.py
(+42 files in other folders)
